View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031139 | Open CASCADE | OCCT:Data Exchange | public | 2019-11-07 00:02 | 2020-12-02 17:12 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.5.0 | ||||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0031139: Data Exchange - fix misprint in RWObj_CafReader | ||||
Description | Patch for 0029902 has a misprint in RWObj_CafReader leading to no material merging being actually performed. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR31139 has been created by kgv. SHA-1: dfe047d0a4f4746bf01c91fe5533d22438b8c431 Detailed log of new commits: Author: kgv Date: Thu Nov 7 00:11:57 2019 +0300 0031139: Data Exchange - fix misprint in RWObj_CafReader RWObj_CafReader::BindNamedShape(), added missing bind to material map. XCAFDoc_VisMaterial::ConvertToCommonMaterial()/::ConvertToPbrMaterial(), added copying of base color texture. XCAFPrs_DocumentExplorer now properly fills XCAFDoc_VisMaterial property of XCAFPrs_Style. |
|
Please raise the patch. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR31139-master-KGV |
|
Combination - OCCT branch : WEEK-45 master SHA - 08b438b07684090e1a9b77f5ac9d152d4bec10c6 5f5b1aed1c6e139bbd34314eca77ae7abcd8895c Products branch : WEEK-45 SHA - f88bc93e3637c4c42f3c154c0b0e167d4e297ae6 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16835.010000000126 / 16848.430000000117 [-0.08%] Products Total CPU difference: 10830.110000000055 / 10873.690000000062 [-0.40%] Windows-64-VC14: OCCT Total CPU difference: 18295.625 / 18319.515625 [-0.13%] Products Total CPU difference: 12840.953125 / 12848.859375 [-0.06%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR31139 has been deleted by inv. SHA-1: dfe047d0a4f4746bf01c91fe5533d22438b8c431 |
occt: master a14f2b47 2019-11-06 21:11:57 Committer: bugmaster Details Diff |
0031139: Data Exchange - fix misprint in RWObj_CafReader RWObj_CafReader::BindNamedShape(), added missing bind to material map. XCAFDoc_VisMaterial::ConvertToCommonMaterial()/::ConvertToPbrMaterial(), added copying of base color texture. XCAFPrs_DocumentExplorer now properly fills XCAFDoc_VisMaterial property of XCAFPrs_Style. |
Affected Issues 0031139 |
|
mod - src/RWObj/RWObj_CafReader.cxx | Diff File | ||
mod - src/XCAFDoc/XCAFDoc_VisMaterial.cxx | Diff File | ||
mod - src/XCAFPrs/XCAFPrs_DocumentExplorer.cxx | Diff File | ||
mod - src/XCAFPrs/XCAFPrs_DocumentExplorer.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-11-07 00:02 | kgv | New Issue | |
2019-11-07 00:02 | kgv | Assigned To | => kgv |
2019-11-07 00:02 | kgv | Relationship added | child of 0029902 |
2019-11-07 00:03 | kgv | Summary | Data Exchange - fix misprint in RWObj_Reader => Data Exchange - fix misprint in RWObj_CafReader |
2019-11-07 00:03 | kgv | Description Updated | |
2019-11-07 00:14 | git | Note Added: 0088759 | |
2019-11-07 08:06 | kgv | Note Added: 0088762 | |
2019-11-07 08:06 | kgv | Assigned To | kgv => bugmaster |
2019-11-07 08:06 | kgv | Severity | minor => trivial |
2019-11-07 08:06 | kgv | Status | new => resolved |
2019-11-07 08:06 | kgv | Status | resolved => reviewed |
2019-11-07 10:51 | bugmaster | Test case number | => Not required |
2019-11-08 14:29 | bugmaster | Note Added: 0088799 | |
2019-11-08 14:29 | bugmaster | Status | reviewed => tested |
2019-11-10 11:18 | bugmaster | Changeset attached | => occt master a14f2b47 |
2019-11-10 11:18 | bugmaster | Status | tested => verified |
2019-11-10 11:18 | bugmaster | Resolution | open => fixed |
2019-11-10 11:41 | git | Note Added: 0088833 | |
2020-12-02 16:40 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |